--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app">
   <header>
     <h1 class="title">
-    To-Do List
+    To-Do List(s)
     </h1>
   </header>
   <app-todos></app-todos>
